--- a/style.css
+++ b/style.css
@@ -1,15 +1,19 @@
-#hours {
-  display: grid;
-  grid-template-columns: repeat(14, 1fr);
-  grid-template-rows: 2fr repeat(7, 10fr);
-  text-align: center;
+td {
+  border: 1px solid black;
+  width: 7.14%;
 }
-#hours div {
-  border-top: 1px solid black;
-  border-right: 1px solid black;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+thead{
+  height: 10%;
+}
+thead th{
+  border: 1px solid black;
+}
+table {
+  width: 100%;
+  height: 75%;
+  border-spacing: 0px;
+  border-collapse: collapse;
+  font-size: 30px;
 }
 .sunday {
   border-bottom: 1px solid black;
@@ -18,16 +22,6 @@
 .day {
   background-color: lightcyan;
 }
-.day {
-  border-left: 1px solid black;
-}
-#first {
-  border-left: 1px solid black;
-}
-.sunday {
-  border-bottom: 1px solid black;
-}
-
 #search {
   display: flex;
   flex-direction: column;
@@ -35,9 +29,12 @@
   gap: 1vw;
 }
 input {
-  width: 15%;
+  width: 40%;
+  /* padding: 10px 0 10px 0; */
+  font-size: 25px;
 }
 button {
+  font-size: 20px;
   width: 10%;
   padding: 10px;
   border-radius: 10px;
@@ -49,11 +46,12 @@ button:hover {
   background-color: rgb(197, 230, 230);
 }
 
-
-.active{
+.active {
   background-color: lightcyan;
-  border: 1px solid black;
-  display: grid;
-
-
+  text-align: center;
+  /* font-size: 20px; */
+}
+.aactive{
+  background-color: red;
+  text-align: center;
 }
