--- a/style.css
+++ b/style.css
@@ -1,57 +1,80 @@
+body {
+	background-color: antiquewhite;
+}
 td {
-  border: 1px solid black;
-  width: 7.14%;
+	border: 1px solid black;
+	width: 7.14%;
 }
-thead{
-  height: 10%;
+thead {
+	height: 10%;
 }
-thead th{
-  border: 1px solid black;
+thead th {
+	border: 1px solid black;
 }
 table {
-  width: 100%;
-  height: 75%;
-  border-spacing: 0px;
-  border-collapse: collapse;
-  font-size: 30px;
+	width: 100%;
+	height: 75%;
+	border-spacing: 0px;
+	border-collapse: collapse;
+	font-size: 30px;
 }
 .sunday {
-  border-bottom: 1px solid black;
+	border-bottom: 1px solid black;
 }
 .hour,
 .day {
-  background-color: lightcyan;
+	background-color: lightcyan;
 }
 #search {
-  display: flex;
-  flex-direction: column;
-  margin-top: 2vw;
-  gap: 1vw;
+	display: flex;
+	flex-direction: column;
+	margin-top: 2vw;
+	gap: 1vw;
 }
 input {
-  width: 40%;
-  /* padding: 10px 0 10px 0; */
-  font-size: 25px;
+	width: 40%;
+	/* padding: 10px 0 10px 0; */
+	font-size: 25px;
 }
 button {
-  font-size: 20px;
-  width: 10%;
-  padding: 10px;
-  border-radius: 10px;
-  border: 1px solid black;
-  background: lightcyan;
-  transition: all 0.3s;
+	font-size: 20px;
+	width: 10%;
+	padding: 10px;
+	border-radius: 10px;
+	border: 1px solid black;
+	background: lightcyan;
+	transition: all 0.3s ease;
+}
+span{
+	z-index: 2;
+	position: relative;
 }
 button:hover {
-  background-color: rgb(197, 230, 230);
+	background-color: rgb(197, 230, 230);
+	filter: drop-shadow(0 0 10px cyan);
+	color: white;
 }
 
 .active {
-  background-color: lightcyan;
-  text-align: center;
-  /* font-size: 20px; */
+	background-color: lightcyan;
+	text-align: center;
+	/* font-size: 20px; */
 }
-.aactive{
-  background-color: red;
-  text-align: center;
+.aactive {
+	background-color: lightcyan;
+	text-align: center;
 }
+
+button:after {
+	position: absolute;
+	content: '';
+	top: 0;
+	left: 0;
+	width: 0;
+	height: 100%;
+	background: #27596d;
+	transition: all 0.45s;
+}
+button:hover:after{
+	width: 100%;
+  }
