--- a/style.css
+++ b/style.css
@@ -6,11 +6,20 @@ td {
 	width: 7.14%;
 }
 thead {
-	height: 10%;
-}
-thead th {
 	border: 1px solid black;
+	height: 10%;
+	font-size: 20px;
+	text-align: left;
+	background-color: lightcyan;
 }
+thead:first-child{
+	background: transparent;
+}
+/* thead th {
+	position: relative;
+	right: 10px; 
+	right: 1vw;
+}  */
 table {
 	width: 100%;
 	height: 75%;
@@ -35,10 +44,11 @@ input {
 	width: 40%;
 	/* padding: 10px 0 10px 0; */
 	font-size: 25px;
+	font-family: Ubuntu Mono
 }
 button {
-	font-size: 20px;
-	width: 10%;
+	font-size: 2vw;
+	width: 15%;
 	padding: 10px;
 	border-radius: 10px;
 	border: 1px solid black;
@@ -60,10 +70,7 @@ button:hover {
 	text-align: center;
 	/* font-size: 20px; */
 }
-.aactive {
-	background-color: lightcyan;
-	text-align: center;
-}
+
 
 button:after {
 	position: absolute;
